# ITJ-BN-Trending

./: .gitignore  ARCHITECTURE_HANDOFF.md  Amibroker research report.md  BACKTEST_ANALYSIS_AND_IMPROVEMENTS.md  BACKTEST_RESULTS_V1.2_COMPARISON.md  BACKTEST_SETTINGS_v4.1.md  BANKNIFTY_GOLD_COMPARISON.md  BANKNIFTY_LOT_SIZE_HISTORY.md  BANKNIFTY_V4_CHANGELOG.md  BANKNIFTY_V5_CHANGELOG.md  BANKNIFTY_V6_CHANGELOG.md  BITCOIN_EOD_TEST_GUIDE.md  BN_LOT_SIZE_CHANGE_DEC2025.md  BankNifty_EOD_Scout_V1.0.pine  BankNifty_TF_V7.0.pine  BankNifty_TF_V8.0.pine  BankNifty_TF_V8.5.pine  BankNifty_TF_V9.0.pine  Bank_Nifty_Trend_Following_v4.1.csv  Bank_Nifty_Trend_Following_v4.1.xlsx  Bitcoin_EOD_Signal_Tester.pine  Bitcoin_TF_V1.0.pine  CHECKLIST_VERIFICATION_BUGFIX.md  CLAUDE.md  CODE_QUALITY_CHECKLIST.md  CODE_REVIEW_FINDINGS_2025-11-14.md  COMPILATION_ERROR_FIX.md  COMPILATION_FIXES_COMPLETE.md  COMPILATION_REVIEW.md  COMPILER_FIX_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW_CHECKLIST.md  CRITICAL_BUGFIXES_2025-11-10.md  CRITICAL_FIXES_AND_UPDATES.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIXES_V1.2.md  Copper_TF_V8.0.pine  DATA_VERDICT.txt  DHAN_REDIRECT_URL_SETUP.md  EOD_MONITOR_INVESTIGATION.md  EQUITY_MANAGEMENT_EXPLAINED.md  (+123 more)
portfolio_manager/: .gitignore  .pre-commit-config.yaml  AI_AGENT_CODE_REVIEW_VALIDATION.md  ARCHITECTURE.md  BUGFIXES_APPLIED.md  BUGFIX_LOGGING.md  BUILD_COMPLETE.md  CLOUDFLARE_TUNNEL_GUIDE.md  CRITICAL_DB_SYNC_INVESTIGATION.md  DATABASE_SETUP.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_STRATEGY_PHASE1.md  FIXPLAN_FEEDBACK.md  FIX_DEPENDENCIES.sh  GET_WEBHOOK_URL.md  HA_PLAN_FINAL_REVIEW.md  HA_PLAN_REVIEW.md  HA_PLAN_REVIEW_RESPONSE.md  MANUAL_TESTING_GUIDE.md  MANUAL_TEST_QUICK_START.sh  MONITORING_DASHBOARD.md  NO_DOMAIN_SOLUTION.md  PHASE1_CHECKLIST.md  PHASE1_CRITICAL_FIXES_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETE.md  PROJECT_TRACKING.md  PYRAMID_GATE_SYSTEM.md  PortfolioManager-HA-system.md  QUICK_START.md  README.md  RISK_MANAGEMENT.md  ROLLOVER_FIXES_APPLIED.md  ROLLOVER_IMPLEMENTATION_STATUS.md  ROLLOVER_REVIEW.md  RUNBOOK.md  SETUP_LIVE_WITH_POSITION.sh  SIGNAL_VALIDATION_DEPLOYMENT_PLAN.md  SIGNAL_VALIDATION_MANUAL_TEST_RESULTS.md  SIGNAL_VALIDATION_SPECIFICATION.md  (+64 more)
portfolio_manager/.taskmaster/: config.json
portfolio_manager/backtest/: __init__.py  engine.py  signal_loader.py
portfolio_manager/brokers/: __init__.py  factory.py  openalgo_client.py
portfolio_manager/core/: __init__.py  audit_integration.py  broker_sync.py  config.py  config_loader.py  db_state_manager.py  eod_executor.py  eod_monitor.py  eod_pyramid_monitor.py  eod_scheduler.py  expiry_calendar.py  holiday_calendar.py  lot_size_history.py  models.py  order_execution_logger.py  order_executor.py  portfolio_state.py  position_sizer.py  pyramid_gate.py  redis_coordinator.py  safety_manager.py  signal_audit_service.py  signal_validation_alerts.py  stop_manager.py  (+8 more)
(+162 files in other folders)
