[project]
name = "portfolio-manager"
version = "1.0.0"
description = "Tom Basso Portfolio Manager for Bank Nifty and Gold Mini"
requires-python = ">=3.10"

[tool.mypy]
# Gradual typing adoption - catch critical bugs without blocking development
python_version = "3.10"

# Core settings for gradual adoption
check_untyped_defs = true          # Check inside functions without type hints
warn_unused_ignores = true         # Warn on unnecessary # type: ignore
warn_redundant_casts = true        # Warn on unnecessary casts

# Allow implicit optional (common in existing code: def foo(x: str = None))
implicit_optional = true           # Allow str = None without Optional[str]

# Don't require type hints everywhere (gradual adoption)
disallow_untyped_defs = false      # Allow functions without type hints
disallow_incomplete_defs = false   # Allow partial type hints
disallow_untyped_calls = false     # Allow calling untyped functions

# Be lenient on return types for now
warn_return_any = false            # Don't warn on returning Any (common with JSON)

# Error display
show_error_codes = true            # Show error codes like [attr-defined]
show_column_numbers = true         # Show column numbers in errors
pretty = true                      # Prettier output formatting

# Ignore missing imports for third-party libraries without stubs
ignore_missing_imports = true

# Paths - only check our code, not tests initially
files = ["core", "live", "brokers"]
exclude = [
    "venv",
    "__pycache__",
    ".git",
    "migrations",
    "tests",
    "scripts",
]

# Ignore errors in test mocks (they use dynamic patterns)
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "brokers.factory"
disable_error_code = ["var-annotated"]

# Per-module overrides - stricter on critical files where bugs matter most
[[tool.mypy.overrides]]
module = "core.models"
disallow_untyped_defs = false      # Relax for now, enable later
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "core.order_executor"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "live.engine"
check_untyped_defs = true

# Ignore live.engine attr-defined for now (variable reuse pattern)
# TODO: Refactor to use different variable names for validation vs execution results
[[tool.mypy.overrides]]
module = "live.engine"
disable_error_code = ["attr-defined"]

# Ignore rollover_executor Sequence[str] append errors (type annotation issue)
[[tool.mypy.overrides]]
module = "live.rollover_executor"
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "live", "brokers"]
omit = ["tests/*", "venv/*"]
